# caffe_people

./: CMakeLists.txt  ReadMe.md  Sample2.java  file_list.txt  read_video.cpp  read_video2.cpp  ref_get_features.cpp  ref_get_features_study.cpp  ref_test_caffe_manual.cpp  tcp_test.cpp  test_new_layer.cpp  test_pic_1.cpp  test_pic_1.h
networks/: aur_deploy.prototxt  deploy2.prototxt  deploy2_back.prototxt
